# record_linkage

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
example_settings/: example1.json  example2.json
src/record_linkage/: app.tcss  linking.py  linking_settings.py  match.py  normalize.py  tui.py  utils.py
