[project]
name = "record_linkage"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Tyler Baur", email = "tbaur@teuteberg.com" }
]
dependencies = [
    "nameparser>=1.1.2",
    "usaddress-scourgify>=0.5.1",
    "splink>=3.9.4",
    "pandas[parquet]>=2.0.3",
    "polars>=0.18.4",
    "rich>=13.4.2",
    "textual>=0.47.1",
    "setuptools>=68.0.0",
    "pydantic>=2.0.3",
    "vl-convert-python>=0.11.2",
    "tenacity>=8.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.3.3",
    "textual-dev>=1.4.0",
    "pytest>=7.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true
